--- a/index.html
+++ b/index.html
@@ -140,5 +140,16 @@
       // 聚焦
       document.getElementById("bqb_key").focus()
     </script>
+
+<!-- 百度统计 -->
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?34564f2837e4e2fb61052ac26a09b689";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
   </body>
 </html>
