--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PP制造计划开源表情包</title>
+    <link rel="shortcut icon" href="./icon.png">
+    <title>PP制造计划 开源表情包</title>
   </head>
 
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
@@ -80,7 +81,7 @@
                 class="d-inline-block align-top lazyload"
                 alt=""
               />
-              PP制造计划开源表情包 ChineseBQB
+              PP制造计划 开源表情包 ChineseBQB
             </a>
           </nav>
 
