--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div class="btn-container">
 
 
-        <button  type="button" style="font-size: 0.6rem" class="btn btn-success" id='${chinesebqb_v2fy_data[m]["url"]}'  data-clipboard-text='${chinesebqb_v2fy_data[m]["url"]}' >
+        <button  type="button" style="font-size: 0.6rem" class="btn btn-success" id='${chinesebqb_v2fy_data[m]["url"]}'  data-clipboard-text='${encodeURI(chinesebqb_v2fy_data[m]["url"])}' >
             复制到朋友圈
         </button>
 
