--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <a class="mdl-navigation__link" href="https://v2fy.com/ChineseBQB/"
             >ChineseBQB 留言板</a
           >
-          <a class="mdl-navigation__link" href="mailto:info@gaotengasset.com"
-            >联系作者，贡献表情包!</a
+          <a class="mdl-navigation__link" href="https://www.v2fy.com/p/2020-10-07-link/"
+            >如何贡献表情包？</a
           >
           <a
             class="mdl-navigation__link"
@@ -87,7 +87,7 @@
           <a
             class="mdl-navigation__link"
             href="https://www.v2fy.com/asset/0i/ChineseBQB/chinesebqb-md/000readme-chinesebqb.assets/ba5b30723b85810c5a8a42be8ead4161.jpeg"
-            >捐赠</a
+            >打赏</a
           >
         </nav>
       </div>
