--- a/index.html
+++ b/index.html
@@ -54,7 +54,18 @@
         </div>
 
         <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="https://v2fy.com/">V2方圆</a>
+          <a class="mdl-navigation__link" href="https://www.v2fy.com/p/2020-10-07-link/"
+          >如何贡献表情包？</a
+        >
+        <a
+          class="mdl-navigation__link"
+          href="https://github.com/zhaoolee/ChineseBQB/graphs/contributors"
+          >贡献者列表</a
+        >
+        <a class="mdl-navigation__link" href="https://fangyuanstu.com/"
+          >图标设计:老罗巴扎嘿</a
+        >
+         
           <a
             class="mdl-navigation__link"
             href="https://github.com/zhaoolee/ChineseBQB"
@@ -66,20 +77,13 @@
             >ChineseBQB 开放数据源</a
           >
 
+          <a class="mdl-navigation__link" href="https://v2fy.com/">更多好玩 | V2方圆</a>
+
           <a class="mdl-navigation__link" href="https://v2fy.com/ChineseBQB/"
-            >ChineseBQB 留言板</a
+            >留言板</a
           >
-          <a class="mdl-navigation__link" href="https://www.v2fy.com/p/2020-10-07-link/"
-            >如何贡献表情包？</a
-          >
-          <a
-            class="mdl-navigation__link"
-            href="https://github.com/zhaoolee/ChineseBQB/graphs/contributors"
-            >贡献者列表</a
-          >
-          <a class="mdl-navigation__link" href="https://fangyuanstu.com/"
-            >图标设计:老罗巴扎嘿</a
-          >
+         
+
           <a class="mdl-navigation__link" href="http://www.beian.miit.gov.cn/"
             >琼ICP备18002320号-2</a
           >
