--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         background-color: #f5efe0;
       }
 
+      .busuanzi-bqb{
+        padding-top: 20px;
+        text-align: center;
+
+        color: #757575;
+      }
+
       .share_div {
         text-align: right;
       }
@@ -218,7 +225,10 @@
           <div id="imgs_container">暂无匹配的表情包</div>
 
           <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-            <span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+          <div class="busuanzi-bqb">
+            <span id="busuanzi_container_site_pv">本页面总访问量<span id="busuanzi_value_site_pv"></span>次</span>
+          </div>
+          
         </div>
       </main>
     </div>
