--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
           <a
             class="mdl-navigation__link"
             href="https://github.com/zhaoolee/ChineseBQB"
-            >ChineseBQB 开源地址</a
+            >ChineseBQB Github开源地址</a
           >
           <a
             class="mdl-navigation__link"
             href="https://raw.githubusercontent.com/zhaoolee/ChineseBQB/master/chinesebqb_github.json"
-            >ChineseBQB 开放数据源</a
+            >ChineseBQB 开放数据源</a
           >
 
           <a class="mdl-navigation__link" href="https://v2fy.com/ChineseBQB/">
-            ChineseBQB 资源库 | 可留言</a
+            ChineseBQB 资源库 | 留言</a
           >
 
           <a class="mdl-navigation__link" href="https://v2fy.com/"
@@ -160,12 +160,6 @@
 
           <a class="mdl-navigation__link" href="http://www.beian.miit.gov.cn/"
             >琼ICP备18002320号-2</a
-          >
-
-          <a
-            class="mdl-navigation__link"
-            href="https://www.v2fy.com/asset/0i/ChineseBQB/chinesebqb-md/000readme-chinesebqb.assets/ba5b30723b85810c5a8a42be8ead4161.jpeg"
-            >打赏</a
           >
         </nav>
       </div>
@@ -183,7 +177,7 @@
                 class="d-inline-block align-top lazyload"
                 alt=""
               />
-              PP制造计划 开源表情包 ChineseBQB
+              开源表情包 ChineseBQB
             </a>
           </nav>
 
@@ -280,15 +274,7 @@
             callBack: function() {}
           });
 
-          // e.clearSelection();
 
-          // // $("#exampleModal").modal('toggle');
-
-          // setTimeout(function(){
-
-          //   // $("#exampleModal").modal("hide");
-
-          // }, 2000)
         });
 
         clipboard.on("error", function(e) {
@@ -389,32 +375,7 @@
               }
             }
 
-            // let tmp_id = "#"+chinesebqb_v2fy_data[m]["url"];
 
-            // $(tmp_id).popover({
-
-            //   "content": "复制成功"+chinesebqb_v2fy_data[m]["url"],
-            //   "placement": "bottom"
-
-            // })
-
-            // $(".copy-to-url").onclick = function() {
-            //   toastr.success(
-            //     "Have fun storming the castle!",
-            //     "Miracle Max Says"
-            //   );
-            // };
-
-            // 分享关键词按钮
-
-            // $(".").onclick = function() {
-            //   popup({
-            //     type: "success",
-            //     msg: "分享给朋友吧~",
-            //     delay: 1800,
-            //     callBack: function() {}
-            //   });
-            // };
 
             var share_page_with_key_val = new ClipboardJS(
               ".share-page-with-key-val",
@@ -447,15 +408,7 @@
             callBack: function() {}
           });
 
-          // e.clearSelection();
 
-          // // $("#exampleModal").modal('toggle');
-
-          // setTimeout(function(){
-
-          //   // $("#exampleModal").modal("hide");
-
-          // }, 2000)
         });
 
             if (img_inner_html.length === 0) {
@@ -463,11 +416,7 @@
             } else {
               $("#imgs_container").html(img_inner_html);
 
-              // $("button").popover({
-              //   "html":true,
-              //   "content": "<div>复制成功!<br/>可粘贴到朋友圈评论区</div>",
-              //   "placement": "bottom"
-              // })
+
 
               // 重新加懒加载
 
