--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <a
             class="mdl-navigation__link"
             href="https://github.com/zhaoolee/ChineseBQB"
-            >ChineseBQB Github开源地址</a
+            >ChineseBQB 开源主页</a
           >
           <a
             class="mdl-navigation__link"
