--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
   <script src="./cdn/clipboard.min.js"></script>
-
+  <script data-ad-client="ca-pub-4504000699134547" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css"
@@ -158,13 +158,11 @@
             >图标设计 | 老罗巴扎嘿</a
           >
 
+          <a target="_blank" class="mdl-navigation__link" href="https://qm.qq.com/cgi-bin/qm/qr?k=OoTOfclhOuIUp2RUr-t0NA70WMUZwSIx&jump_from=webapi">官方QQ群: 700477996</a>
+
           <a class="mdl-navigation__link" href="http://www.beian.miit.gov.cn/"
             >琼ICP备18002320号-2</a
           >
-
-          <a class="mdl-navigation__link" href="https://dun.mianbaoduo.com/@zhaoolee"
-          >顿顿饭</a
-        >
 
 
         </nav>
