--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       .use_desc{
         font-size: 12px;
         color: #111111;
+        margin-bottom: 10px;
       }
     </style>
 
@@ -223,7 +224,7 @@
               </button>
             </div>
           </div>
-          <div className="use_desc">在QQ或微信内，长按表情包图片，即可发送给好友</div>
+          <div class="use_desc">在QQ或微信内，长按表情包图片，即可发送给好友</div>
 
           <div id="imgs_container">暂无匹配的表情包</div>
 
