--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
             >琼ICP备18002320号-2</a
           >
 
+          <div style="text-align: center;"><image width="200px" src="https://cdn.fangyuanxiaozhan.com/assets/16213432399422P8pnQ7d.png"></image></div>
+
 
         </nav>
       </div>
