--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PP制造计划 开源表情包</title>
   </head>
 
-  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+  <script src="./cdn/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
   <script src="./cdn/clipboard.min.js"></script>
   <!-- <script data-ad-client="ca-pub-4504000699134547" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
